Fix icons position on mobiles

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -2270,7 +2270,8 @@ h2 .rssicon{
 		visibility:visible;
 	}
 	.wallets.walletsmobile>div>div>h2:first-child+div+div+div>div{
-		line-height:22px;
+		padding:8px 0 8px 22px;
+		background-position:left 7px;
 	}
 	.wallets.walletsmobile>div>div>h2:first-child+div+div+div+p{
 		padding-right:5px;
